[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "1.3.2"
common = { path = "../common/" }

[profile.release]
strip = true
lto = true

[profile.fast]
inherits = "dev"
debug = false
debug-assertions = false
overflow-checks = false
incremental = true
strip = true
